@@ -87,6 +87,7 @@ So if there's 100 different sword types, and 5 axe types, they'll still have sam
 - fix jewel crash bug
 - lvl 1 common mobs should now have similar health as vanilla minecraft.
 - mobs will have less hp on average
+- mobs now have extra attributes per rarity, like move speed and knockback resistance
 - reworked modify station gui to be instant modify with a button click
 - increased chance for gear to be higher rarity
 - fix nature balm
